# tauri-plugin-quicklook

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
examples/tauri-app/: README.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts  types.ts  utils.ts
permissions/: default.toml  preview-pane.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: hide_preview_pane.toml  set_preview_items.toml  set_preview_items_and_show.toml  show_preview_pane.toml  toggle_preview_pane.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs
