[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.1", default-features = false , features = [] }

[dependencies]
parking_lot = {version = "0.12.5", features = ["deadlock_detection"] }
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-quicklook = { path = "../../../" }
